syntax = "proto3";

package ibcgo.core.connection.v1;

option go_package = "github.com/cosmos/ibc-go/core/03-connection/types";

import "gogoproto/gogo.proto";
import "ibcgo/core/connection/v1/connection.proto";

// GenesisState defines the ibc connection submodule's genesis state.
message GenesisState {
  repeated IdentifiedConnection connections = 1
      [ (gogoproto.nullable) = false ];
  repeated ConnectionPaths client_connection_paths = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"client_connection_paths\""
  ];
  // the sequence for the next generated connection identifier
  uint64 next_connection_sequence = 3
      [ (gogoproto.moretags) = "yaml:\"next_connection_sequence\"" ];
}
